--- a/draft/tin-bachproef.bib
+++ b/draft/tin-bachproef.bib
@@ -18,7 +18,7 @@
   title = {Best Ad Blocker tested for performance},
   year = {2015},
   howpublished = {\url{http://firefoxcvp.com/best-ad-blocker-tested-for-performance/}},
-	note = { accessed 12 March 2016},
+	note = {Online, accessed 12 March 2016, firefoxcvp.com/best-ad-blocker-tested-for-performance/},
   urldate = {2016-23-03}
 }
 @article{Lean2015,
@@ -26,13 +26,13 @@
   title = {Getting LEAN with Digital Ad UX},
   year = {2015},
   howpublished = {\url{http://www.iab.com/news/lean/}},
-	note = { accessed 12 may 2016},
+	note = {Online, accessed 12 may 2016, iab.com/news/lean/},
   urldate = {2015-10-15}
 }
 @article{PageFair2015,
 	author={PageFairTeam},
 	title={The cost of ad blocking},
-	note     = {Online, accessed 01 March 2016},
+	note     = {Online, accessed 01 March 2016, blog.pagefair.com/2015/ad-blocking-report},
 	year={2015},
 	howpublished = {\url{https://blog.pagefair.com/2015/ad-blocking-report/}},
 	
@@ -41,7 +41,7 @@
 	author={PageFairTeam},
 	title={The adblocking-report},
 	year={2014},
-	note = {Online, accessed 01 March 2016},
+	note = {Online, accessed 01 March 2016, blog.pagefair.com/2014/adblocking-report/},
 	howpublished = {\url{https://blog.pagefair.com/2014/adblocking-report/}},
  
 }
@@ -49,7 +49,7 @@
 	author={Wilson,Emily},
 	title={Native Ads Vs. Display Ads},
 	year={2013},
-	note = {Online, accessed 14 April 2016},
+	note = {Online, accessed 14 April 2016, magnetmediafilms.com/blog/infographic-native-ads-vs-display-ads-and-how-mobile-fits-in},
 	howpublished = {\url{magnetmediafilms.com/blog/infographic-native-ads-vs-display-ads-and-how-mobile-fits-in}},
  
 }
@@ -57,30 +57,29 @@
 @article{Chaffey2016,
   author = {Chaffey, Dave},
   journal = {smartinsights},
-	note     = {Online, accessed 16 March 2016},
-  title = {{Display advertising clickthrough rates
-}},
+	note     = {Online, accessed 16 March 2016, smartinsights.com/internet-advertising/internet-advertising-analytics/display-advertising-clickthrough-rates/},
+  title = {{Display advertising clickthrough rates}},
   year = {2016}
 	
 }
 @book{Silverman2015,
  author = {Silverman, David},
  title = {Internet Advertising Revenue Report},
-note     = {Online, accessed 16 March 2016},
+ note = {Online, accessed 16 March 2016, iab.com/wp-content/uploads/2015/10/},
  year = {2015},
  publisher = {Internet Advertising Bureau},
 }
 @article{BI-Insider2016,
   author = {Hoelzel, Mark},
   journal = {Business Insider, UK},
-	note     = {Online, accessed 16 March 2016},
+	note     = {Online, accessed 16 March 2016, businessinsider.com/intelligence/THE-US-DIGITAL-MEDIA-AD-SPEND-REPORT/p/52319339/category=11987293 },
   title = {The us digital media ad spend report},
   year = {2016}
 }
 @article{EMarketer2016,
   author = {eMarketer, E},
   journal = {eMarketer},
-	note     = {Online, accessed 28 March 2016},
+	note     = {Online, accessed 28 March 2016, emarketer.com/Article/Digital-Ad-Spending-Surpass-TV-Next-Year/1013671},
   title = {Digital Ad Spending to Surpass TV Next Year
 },
   year = {2016}
@@ -88,15 +87,14 @@ note     = {Online, accessed 16 March 2016},
 @article{pwc2015,
   author = {Hobbs,Matthew},
   journal = {pwc},
-	note     = {Online, accessed 16 March 2016},
-  title = {internet-advertising insights
-},
+	note     = {Online, accessed 16 March 2016, pwc.com/gx/en/industries/entertainment-media/outlook/segment-insights/internet-advertising.html},
+  title = {internet-advertising insights},
   year = {2015}
 }
 @article{IAB2014,
   author = {Friend,B},
   journal = {IAB},
-	note     = {Online, accessed 20 April 2016},
+	note     = {Online, accessed 20 April 2016, iabuk.net/about/press/archive/iab-uk-reveals-latest-ad-blocking-behaviour},
   title = {IAB Ad Blocking Study
 },
   year = {2014}
@@ -105,7 +103,7 @@ note     = {Online, accessed 16 March 2016},
  author = {Malcolm, Toms},
  title = {Adblock Plus Efficacy Study},
  year = {2015},
- note     = {Online, accessed 20 April 2016},
+ note     = {Online, accessed 20 April 2016, sfu.ca/snfchs/snf-new-media-lab/Adblock.html},
  publisher = {Simon Frazer University},
 }
 @article{nytimes2015,
@@ -113,6 +111,15 @@ note     = {Online, accessed 16 March 2016},
   journal = {IAB},
   title = {The Cost of Mobile Ads on News Websites
 },
-note     = {Online, accessed 24 20 April 2016},
+note     = {Online, accessed 24 20 April 2016, nytimes.com/interactive/2015/10/01/business/cost-of-mobile-ads.html},
+  year = {2015}
+}
+
+@article{IABNL2015,
+  author = {IABNL},
+  journal = {IAB},
+  title = {The Cost of Mobile Ads on News Websites
+},
+note     = {Online, accessed 24 20 April 2016, iab.nl/downloads/adblockers-onderzoek/},
   year = {2015}
 }
