Titel en instelling aangepast

--- a/draft/bachelorproef.tex
+++ b/draft/bachelorproef.tex
@@ -99,10 +99,10 @@
 
 % Indien je bachelorproef in opdracht van een bedrijf of organisatie
 % geschreven is, geef je hier de naam.
-\newcommand{\instelling}{---}
+\newcommand{\instelling}{-}
 
 % De titel van het rapport/bachelorproef
-\newcommand{\titel}{Adblocker en de impact op gratis content beschikbaar op het internet.}
+\newcommand{\titel}{Ad blockers en hun impact op gratis content beschikbaar op het internet}
 
 % Datum van indienen
 \newcommand{\datum}{29 mei 2016}
@@ -146,7 +146,7 @@
     \promotor\\
     Co-promotor:\\
     \copromotor\\[2.5cm]
-    
+    Instelling: \instelling\\[.5cm]
     Academiejaar: \academiejaar\\[.5cm]
     \examenperiode
     \endgroup
@@ -176,7 +176,7 @@
     \promotor\\
     Co-promotor:\\
     \copromotor\\[2.5cm]
-    
+    Instelling: \instelling\\[.5cm]
     Academiejaar: \academiejaar\\[.5cm]
     \examenperiode
     \endgroup
